# cupid

./: .gitignore  AGENT_FIXES_SUMMARY.md  BEFORE_AFTER_COMPARISON.md  CLAUDE.md  CONTRIBUTING.md  FIXES_SUMMARY.md  LOGGING_BEFORE_AFTER.md  LOGGING_GUIDE.md  LOGGING_IMPLEMENTATION_SUMMARY.md  LOGGING_QUICK_REFERENCE.md  PROBLEM_LOG.md  QUICK_START_GUIDE.md  README.md  SUPERVISOR_AGENT_GUIDE.md  SUPERVISOR_IMPLEMENTATION_SUMMARY.md  SUPERVISOR_QUICK_REFERENCE.md  docker-compose.yml  makefile  project_plan.md  pyproject.toml  pyrightconfig.json  temp-user.txt
.claude/: settings.local.json
backend/: .env.example  alembic.ini  pyproject.toml  pyrightconfig.json  requirements.txt  test_agent.py  test_streaming.py  test_supervisor.py
backend/Scripts/: run_youtube_sync.py  test_run_ingest.py
backend/alembic/: env.py
backend/app/: config.py  main.py
backend/tests/: conftest.py  test_run_ingest.py
dev_resources/: OAuth_guide.md  README.md  async.py  composer_agent.py  cookie_flow.md  cupid_research_report.md  http_client.py  project_growth_plan.md  project_plan.md  redis_guide.md  research_agent.py  research_agent_old.py  research_report.md  social_media_connection.md  sql_queries_docker.sh  test_guide.md  test_httpx.py  trends_article_check..sh  youtube_connect_request.sh
docs/: project_plan.md
frontend/: eslint.config.mjs  package-lock.json  package.json
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: Button.tsx  ComposerResults.tsx  Footer.tsx  Header.tsx  ProtectedRoute.tsx  SocialMediaCards.tsx  TrendsCard.tsx
frontend/lib/: api.ts  (+3 more)
(+72 files in other folders)
